[2단계 - 블랙잭(베팅) 여우(조승현) 미션 제출합니다. (#574)
* refactor : 코드 컨벤션 개선

* refactor : 정적 팩토리 메소드의 네이밍 규칙 적용

* refactor : 메시지에 맞는 역할을 제대로 수행하지 못하는 메소드 제거

* refactor : 딜러에게 카드를 주는 작업이 내부적으로 giveCard 메소드를 재사용하도록 개선

* refactor : 게임 결과를 계산하는 작업을 Dealer가 하지 않고 GameResultDecider 라는 별도의 유틸 클래스에서 작업하도록 변경

* refactor : 클래스명과 메소드명을 도메인에 알맞는 네이밍으로 수정

* refactor : 메소드명을 가독성 있게 수정

* feat : 베팅 내역을 Player 객체 안에서 관리하도록 필드 추가

* feat : 점수 비교 결과에 따라 베팅액 수익금을 계산하는 기능 구현

* refactor : 테스트 코드에서의 카드 생성을 상수를 사용하도록 변경

* feat : 잘못 파악한 요구사항을 수정하고, 블랙잭일 경우의 베팅액 계산 기능 구현

* refactor : 도메인에 더 어울리는 메소드명으로 변경

* feat : 게임 진행 후 베팅액의 수익 정보를 출력하는 기능 구현

* fix : HashMap 자료구조로 인해 출력하는 플레이어 순서가 불규칙했던 버그 해결

* refactor : 메소드 순서를 컨벤션에 맞게 조정

* refactor : 정적 팩토리 메소드가 있는 객체의 생성자를 private로 차단

* refactor : 원활한 디버깅을 위해 toString 오버라이드

* test: 미처 tdd로 구현하지 못한 메소드들의 단위 테스트 추가

* refactor: Players에서 dealer를 거치지 않고도 플레이어간의 점수를 비교하도록 변경

* refactor: Dealer와 Gambler의 차이가 없으므로, 두 구현체를 제거하고 Player 클래스를 사용하도록 변경

* refactor: 인덱스를 사용해 카드를 뽑는 기존의 방식에서 덱을 섞은 후 카드를 뽑는 방식으로 변경

* refactor: 중복된 행위를 하는 메서드를 통일

* refactor: OutputView 에서 Hand가 Card들을 어떤 자료구조로 담아두는 지 유추하지 못하도록 변경

* refactor: 점수 비교 결과에 따라 배팅액을 계산하는 작업을 별도의 메서드에서 진행하도록 변경

* refactor: 이름을 이용해 카드를 전해주도록 변경

* refactor: participant와 gambler 라는 명칭이 혼동되지 않도록 통일